--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                             ABOUT US
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
-                            <li><a class="dropdown-item" href="#">WHO ARE WE?</a></li>
-                            <li><a class="dropdown-item" href="#">WHY MERCH</a></li>
-                            <li><a class="dropdown-item" href="#">TESTIMONIALS</a></li>
-                            <li><a class="dropdown-item" href="#">SUSTAINABILITY</a></li>
-                            <li><a class="dropdown-item" href="#">MERCH JOURNAL</a></li>
-                            <li><a class="dropdown-item" href="#">FAQS</a></li>
+                            <li><a class="dropdown-item" href="/aboutus/who-are-we.html">WHO ARE WE?</a></li>
+                            <li><a class="dropdown-item" href="/aboutus/why-merch.html">WHY MERCH</a></li>
+                            <li><a class="dropdown-item" href="/aboutus/our-testimonials.html">TESTIMONIALS</a></li>
+                            <li><a class="dropdown-item" href="/aboutus/sustainability.html">SUSTAINABILITY</a></li>
+                            <li><a class="dropdown-item" href="/aboutus/merch-journal.html">MERCH JOURNAL</a></li>
+                            <li><a class="dropdown-item" href="/aboutus/blogs.html">BLOGS</a></li>
                         </ul>
                     </div>
                     <a class="nav-link" href="#">OUR SERVICES</a>
