--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="fonts.css">
 </head>
 <body>
     <!-- Desktop Header -->
@@ -105,7 +106,9 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 content-col">
-                    <h2>STAND OUT WITH OUR TOP QUALITY PROMOTIONAL PRODUCTS</h2>
+                    <h1>
+                        <strong>STAND OUT WITH OUR TOP QUALITY PROMOTIONAL PRODUCTS</strong> 
+                    </h1>
                     <div class="content-text">
                         <p>We're first and foremost a <strong>creative branded merchandising agency</strong>. Established in 2015, we quickly became the go-to merch solution for companies that wanted something different to the traditional offering.</p>
                         <p>We live to <strong>create promotional products</strong> that get attention for all the right reasons and approach everything we do with <em>Quality, Design & Purpose</em>.</p>
@@ -130,7 +133,9 @@
                     </div>
                 </div>
                 <div class="col-lg-6 content-col order-lg-2 order-1">
-                    <h2>MERCHGIRLS ARE DOING MERCH DIFFERENTLY</h2>
+                    <h1>
+                        <strong>MERCHGIRLS ARE DOING MERCH DIFFERENTLY</strong> 
+                    </h1>
                     <div class="content-text">
                         <p>Our purpose is to evolve <em>corporate merchandise</em> beyond the 'slap a logo on it' mentality and instead create products with design integrity and innate appeal.</p>
                         <p>We create <strong>high quality custom promotional merchandise for clients</strong> who want to extend their brand into the hands of their target audience.</p>
@@ -156,7 +161,9 @@
     <!-- Product Showcase Section -->
     <section class="product-showcase">
         <div class="container">
-            <h2 class="text-center">PROMOTIONAL MERCHANDISE TO PERFECTLY FIT YOUR BUSINESS</h2>
+            <h2 class="text-center">
+                <strong>PROMOTIONAL MERCHANDISE TO PERFECTLY FIT YOUR BUSINESS</strong>
+            </h2>
             
             <div class="row product-grid">
                 <!-- Product 1 -->
