Resolved merge conflict in styles.css

--- a/aboutus/who-are-we.html
+++ b/aboutus/who-are-we.html
@@ -134,7 +134,7 @@
     </section>
 
     <!-- CTA Section -->
-    <section class="cta-section">
+    <section class="cta-section bg-third">
         <div class="container">
             <div class="cta-content text-center">
                 <h2 class="cta-title">When you work with Merchgirls, you get more...</h2>
@@ -208,6 +208,43 @@
             </div>
         </div>
 
+        <div class="container mt-5">
+            <div class="row align-items-center">
+                <div class="col-lg-6 image-col order-lg-1 order-2">
+                    <div class="image-wrapper">
+                        <img src="https://images.squarespace-cdn.com/content/v1/5f4dbf552006d865dded91f9/27e96bf2-f59b-44ff-b028-3a9259c19ae4/BTS+images+5.jpg?format=2500w" alt="Leather Tag" class="promo-image">
+                    </div>
+                </div>
+                <div class="col-lg-6 content-col order-lg-2 order-1">
+                    <h2>Meet the Merchgirls</h2>
+                    <div class="content-text">
+                        <p>Hello, 👋🏼 we're Hannah and Pippa, the co-founders of Merchgirls.</p>
+                        <p>Together we founded Merchgirls in 2015. Armed with experience in Design (Hannah) and Production (Pippa), and after many years working in fashion together, we combined forces to provide creative merchandise to the wider market.</p>
+                        <p>You could say from fairy wings, come big things. What started with one client; The Australian Ballet, has grown to a stellar list of some of the best companies Australia-wide. The demand for 'merchandise that's twice as nice' is real.</p>
+                        </p>We have had a lot of fun building our colourful business these past 7 years and have made almost every product from tutus to 2 metre tote bags and everything in between. We remain passionate about creating a next level merchandise experience for all our customers and thank you for stopping by.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 content-col">
+                    <h2>Meet the Team</h2>
+                    <div class="content-text">
+                        <p>We are super proud of the amazing team we have formed over the past few years. With our powers combined, we are poised to make your merch dreams come true.</p>
+                        <p>Together we have built a team of talented creatives, customer service and production experts that bring a unique style to the way we do business. With backgrounds in product design, graphics, account management as well as production and logistics, the Merchgirls team will exceed your expectations of a promotional merch company.</p>
+                        <p>Read more about our talented team below (and their choice of emojis). </p>
+                    </div>
+                </div>
+                <div class="col-lg-6 image-col">
+                    <div class="image-wrapper">
+                        <img src="https://images.squarespace-cdn.com/content/v1/5f4dbf552006d865dded91f9/0c5e5a85-ff50-4882-bc08-f9b90dba9f68/BTS+images+4.jpg?format=2500w" alt="Promotional Products" class="promo-image">
+                    </div>
+                </div>
+            </div>
+        </div>
        
     </section>
 
