--- a/aboutus/why-merch.html
+++ b/aboutus/why-merch.html
@@ -93,6 +93,95 @@
     </header>
 
 
+
+    
+    <section class="mt-5">
+        <div class="container">
+            <div class="cta-content text-center">
+                <h2 class="cta-title">Why Merch</h2>
+            </div>
+        </div>
+    </section>
+
+
+
+
+      <!-- Promotional Section -->
+      <section class="promotional-section mt-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 image-col order-lg-1 order-2">
+                    <div class="image-wrapper">
+                        <img src="https://images.squarespace-cdn.com/content/v1/5f4dbf552006d865dded91f9/8fbe4b60-8e32-4b5b-bc39-57d2cf8b9eb8/ARKIE.jpg?format=2500w" alt="Leather Tag" class="promo-image">
+                    </div>
+                </div>
+                <div class="col-lg-6 content-col order-lg-2 order-1">
+                    <h2 class="fs-3">Merch has its perks <br>
+                        A VERY POWERFUL MARKETING TOOL.</h2>
+                    <div class="content-text">
+                        <p>Merch has been around for a long time and many businesses have used its incredible marketing power to stay top of mind with even the most difficult target audiences (we are looking at you millennials). </p>
+                        <p>Giving people something they can touch and use everyday that showcases your  branding in a fresh way,  is one of the most powerful marketing tools. It is a piece of advertising they can hold in their hands and engage with.</p>
+                   </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 content-col">
+                    <h2>Meet the Team</h2>
+                    <div class="content-text">
+                        <p>We are super proud of the amazing team we have formed over the past few years. With our powers combined, we are poised to make your merch dreams come true.</p>
+                        <p>Together we have built a team of talented creatives, customer service and production experts that bring a unique style to the way we do business. With backgrounds in product design, graphics, account management as well as production and logistics, the Merchgirls team will exceed your expectations of a promotional merch company.</p>
+                        <p>Read more about our talented team below (and their choice of emojis). </p>
+                    </div>
+                </div>
+                <div class="col-lg-6 image-col ml-1">
+                    <div class="image-wrapper">
+                        <img src="https://images.squarespace-cdn.com/content/v1/5f4dbf552006d865dded91f9/cf50439e-5e49-42f5-bd93-cbf85d7c8365/Mecca-Scarf.jpg?format=2500w" alt="Promotional Products" class="promo-image">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 image-col order-lg-1 order-2 mr-1">
+                    <div class="image-wrapper">
+                        <img src="https://images.squarespace-cdn.com/content/v1/5f4dbf552006d865dded91f9/284a565d-b6f2-4634-b592-5c7a449c5f4c/Are-Media.jpg?format=2500w" alt="Leather Tag" class="promo-image">
+                    </div>
+                </div>
+                <div class="col-lg-6 content-col order-lg-2 order-1 ml-4">
+                    <h2>Meet the Merchgirls</h2>
+                    <div class="content-text">
+                        <p>Hello, 👋🏼 we're Hannah and Pippa, the co-founders of Merchgirls.</p>
+                        <p>Together we founded Merchgirls in 2015. Armed with experience in Design (Hannah) and Production (Pippa), and after many years working in fashion together, we combined forces to provide creative merchandise to the wider market.</p>
+                        <p>You could say from fairy wings, come big things. What started with one client; The Australian Ballet, has grown to a stellar list of some of the best companies Australia-wide. The demand for 'merchandise that's twice as nice' is real.</p>
+                        </p>We have had a lot of fun building our colourful business these past 7 years and have made almost every product from tutus to 2 metre tote bags and everything in between. We remain passionate about creating a next level merchandise experience for all our customers and thank you for stopping by.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+
+
+     <!-- CTA Section -->
+     <section class="cta-section">
+        <div class="container">
+            <div class="cta-content text-center">
+                <h2 class="cta-title">Merch can boost morale, create hype, raise revenue,<br>
+                    maintain brand loyalty and just makes people feel good.</h2>
+            </div>
+        </div>
+    </section>
+
+
+
+
        <!-- Footer -->
        <footer class="site-footer">
         <div class="container">
